es search 결과에서 id 값을 제대로 가져오도록 수정